# Numorph

./: .gitignore  Cargo.toml  README.md
comp/cache/: numorph_numcache_0004.ncc  todo.todo
src/: iteration.rs  main.rs  morpher.rs  quantumic_number.rs  serializer.rs
src/cuda/: core.cu  kernel.cpp
utils/: tester.py
